# Outlook

./: .env  .gitignore  BRANCH_UPDATE_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  TEST.MD  api_wrapper.py  app.py  app4D.py  archivestuff.ps1  check_emails_display.py  database.py  db.py  docker-compose.yml  email_processor.py  getmail.py  models.py  pyproject.toml  requirements.txt  tests  untitled.py  view.json  webview.py
.devcontainer/: devcontainer.json
examples/: quickstart.ipynb
gpg2/: attached_UC34+4 B for 140_20241030162204.html  from_ADAM_TUCHTENHAGEN_Product_up_for_grabs_20241031153329.html  from_AMY_GARCIA_Cigna_and_CVS_Members_-_Flu_Covid_Vaccinations_20241108000432.html  from_AMY_GARCIA_Disclosures_About_Your_Retirement_Plan_20241107005443.html  from_AMY_GARCIA_Stay_Well_Informed_this_November!_20241101223311.html  from_ANNA_SENDNER_in_Teams_ANNA_sent_a_message_20241030185803.html  from_ARMANDO_LOPEZ_Booster_order_20241105150311.html  from_BASSEL_MALLAH_Period_11_True_up_20241107134508.html  from_BASSEL_MALLAH_in_Teams_BASSEL_sent_a_message_20241103232202.html  from_CRISTAL_SANCHEZ_Duane__Johnson-_SSR_NR_(Day_Shift)_20241107211820.html  from_CRISTAL_SANCHEZ_Jeremiah_Burkman-_Installer__20241107215911.html  from_CRISTAL_SANCHEZ_Jermin_Henry-_SSR_NR_(Day_Shift)__20241107212242.html  from_CRISTAL_SANCHEZ_Kyle_Witherspoon-_SSR_NR__20241101195009.html  from_CRISTAL_SANCHEZ_Maury_Batten-_Installer__20241029150944.html  from_CRISTAL_SANCHEZ_Steven_Doughty-_SSR_NR_(Day_Shift)__20241107211532.html  from_JEFF_HAMILTON_Chem_question_20241105193839.html  (+1613 more)
(+212 files in other folders)
