[project]
name = "outlook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exchangelib==5.5.1",
    "flask==3.0.3",
    "icecream==2.1.3",
    "logging==0.4.9.6",
    "pathlib==1.0.1",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "waitress==3.0.2",
    "requests==2.32.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
